@@ -1,3 +1,11 @@
+2019-11-04  Martin Liska  <mliska@suse.cz>
+
+	* ggc.h (ggc_delete): New function.
+	* ipa-fnsummary.c (ipa_free_fn_summary): Use it.
+	* ipa-prop.c (ipa_free_all_edge_args): Likewise.
+	(ipa_free_all_node_params): Likewise.
+	* ipa-sra.c (ipa_sra_analysis): Likewise.
+
 2019-11-02  Jan Hubicka  <hubicka@ucw.cz>
 
 	* ipa-fnsummary.c (set_cond_stmt_execution_predicate,
